--- a/src/scss/misc.scss
+++ b/src/scss/misc.scss
@@ -25,3 +25,16 @@
     @apply border-black;
   }
 }
+
+.swal2-content,
+.swal2-header {
+  @apply font-body;
+}
+
+.swal2-styled.swal2-confirm {
+  background-color: #4eccc3 !important;
+}
+
+a {
+  @apply text-red font-bold;
+}
